feat(thesis): daily update

--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -697,11 +697,14 @@ tartoznak a fent említett minimális követelmények közé.
 \subsection{A Dante hálózatok áttekintése}
 %----------------------------------------------------------------------------
 
-A 2020-2021-es Covid-19 járvány során lehetőségem nyílt részt venni egy átfogó Dante
+A 2020-2021-es Covid-19 járvány során lehetőségem volt részt venni egy átfogó Dante
 kurzuson, amelyet a Dante technológia fejlesztője, az Audinate szervezett. A kurzus
 részletes betekintést nyújtott a Dante hálózatok működésébe. E fejezetben a belsős
 oktatóanyagokat fogom felhasználni, amelyeket a kurzus alatt kaptam. Ezek a dokumentumok
-csak a kurzus résztvevői számára elérhetők, így nem publikálhatók.
+csak a kurzus résztvevői számára elérhetők, így konkrét dokumentumként nem publikálhatók. 
+Ebből következően ezen írásokat konkrét hivatkozások nélkül fogom felhasználni, mivel
+hivatkozásuk nem lehetséges.
+Viszont fontos megjegyezni, hogy a fejezetben szereplő ábrák és információk az Audinate tulajdonát képezik.
 
 A Dante hanghálózatok digitális hangátviteli technológiát képviselnek, amely lehetővé teszi
 a hang elosztását és irányítását szabványos Ethernet hálózatokon keresztül. Az ausztrál
