--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -39,8 +39,19 @@ További fejlesztés a rendszerben a LineArray hangfalak számának növelése m
 amely tovább növeli a rendszer teljesítményét és a maximálisan lefedhető területet.
 
 %----------------------------------------------------------------------------
-\subsubsection{Shure Axient Digital rendszer}
+\subsubsection{Shure Axient Digital rendszer} % A jel egyből a Dante hálózaton keresztül érkezik a keverőbe nincs A/D konverzió
 %----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{TASCAM multitrack recorder} %TASCAM – DA-6400
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{Allen \& Heath ME Personal Mixing System} % Előadóknak egyéni keverési lehetőség
+%----------------------------------------------------------------------------
+% ME-U + M-DANTE kártya + ME-500
+
+
 
 %----------------------------------------------------------------------------
 \begin
